limpeza do slide

--- a/bib/bibliografia.bib
+++ b/bib/bibliografia.bib
@@ -1,59 +1,20 @@
-@article{bezerra2017abordagem,
-  title={Uma abordagem baseada em tipicidade e excentricidade para agrupamento e classifica{\c{c}}{\~a}o de streams de dados},
-  author={Bezerra, Clauber Gomes},
-  year={2017},
-  publisher={Brasil}
-}
 
-@article{silva2013data,
-  title={Data stream clustering: A survey},
-  author={Silva, Jonathan A and Faria, Elaine R and Barros, Rodrigo C and Hruschka, Eduardo R and De Carvalho, Andre CPLF and Gama, Jo{\~a}o},
-  journal={ACM Computing Surveys (CSUR)},
-  volume={46},
-  number={1},
-  pages={13},
-  year={2013},
-  publisher={ACM}
+@article{schreiber2000measuring,
+  title={Measuring information transfer},
+  author={Schreiber, Thomas},
+  journal={Physical review letters},
+  volume={85},
+  number={2},
+  pages={461},
+  year={2000},
+  publisher={APS}
 }
-
-@article{costa2014real,
-  title={Real-time fault detection using recursive density estimation},
-  author={Costa, Bruno Sielly Jales and Angelov, Plamen Parvanov and Guedes, Luiz Affonso},
-  journal={Journal of Control, Automation and Electrical Systems},
-  volume={25},
-  number={4},
-  pages={428--437},
-  year={2014},
-  publisher={Springer}
+@article{shannon1963mathematical,
+  title={The mathematical theory of communication. 1949},
+  author={Shannon, Claude E and Weaver, Warren},
+  journal={Urbana, IL: University of Illinois Press},
+  year={1963}
 }
-
-@article{costa2015fully,
-  title={Fully unsupervised fault detection and identification based on recursive density estimation and self-evolving cloud-based classifier},
-  author={Costa, Bruno Sielly Jales and Angelov, Plamen Parvanov and Guedes, Luiz Affonso},
-  journal={Neurocomputing},
-  volume={150},
-  pages={289--303},
-  year={2015},
-  publisher={Elsevier}
-}
-
-@inproceedings{costa2014new,
-  title={A new unsupervised approach to fault detection and identification},
-  author={Costa, Bruno Sielly Jales and Angelov, Plamen Parvanov and Guedes, Luiz Affonso},
-  booktitle={Neural Networks (IJCNN), 2014 International Joint Conference on},
-  pages={1557--1564},
-  year={2014},
-  organization={IEEE}
-}
-
-@book{angelov2012autonomous,
-  title={Autonomous learning systems: from data streams to knowledge in real-time},
-  author={Angelov, Plamen},
-  year={2012},
-  publisher={John Wiley \& Sons},
-  address={s.l.}
-}
-
 
 @article{downs1993plant,
   title={A plant-wide industrial process control problem},
@@ -66,13 +27,233 @@
   publisher={Elsevier}
 }
 
-@inproceedings{angelov2014anomaly,
-  title={Anomaly detection based on eccentricity analysis},
-  author={Angelov, Plamen},
-  booktitle={Evolving and Autonomous Learning Systems (EALS), 2014 IEEE Symposium on},
-  pages={1--8},
-  year={2014},
-  organization={IEEE},
-  address={s.l.},
+@article{shannon1948mathematical,
+  title={A mathematical theory of communication},
+  author={Shannon, Claude Elwood},
+  journal={Bell system technical journal},
+  volume={27},
+  number={3},
+  pages={379--423},
+  year={1948},
+  publisher={Wiley Online Library}
+}
+
+@book{kullback1997information,
+  title={Information theory and statistics},
+  author={Kullback, Solomon},
+  year={1997},
+  publisher={Courier Corporation}
+}
+
+@techreport{ANSI/ISA,
+type = {Standard},
+author = {ANSI/ISA},
+year = {2016},
+title = {{Management of Alarms Systems for the Process Industries}},
+address = {North Carolina},
+institution = {American National Standard/Instrumentations, Systems \& Automation Society. (ANSI/ISA-18.02-2016)}
+}
+
+@article{SouzadeAbreu2018analise,
+  title={Análise de Desempenho do Método deTransferÊncia de Entropia para Determinação de Relações de Causalidade},
+  author={Souza de Abreu, Rute and Pinheiro Nunes, Yuri Thomas and Guedes, Luiz Affonso},
+  journal={Anais do Congresso Brasileiro de Automática - CBA 2018},
+  year={2018}
+}
+
+@article{cooper1992bayesian,
+  title={A Bayesian method for the induction of probabilistic networks from data},
+  author={Cooper, Gregory F and Herskovits, Edward},
+  journal={Machine learning},
+  volume={9},
+  number={4},
+  pages={309--347},
+  year={1992},
+  publisher={Springer}
+}
+
+@article{vicente2011transfer,
+  title={Transfer entropy—a model-free measure of effective connectivity for the neurosciences},
+  author={Vicente, Raul and Wibral, Michael and Lindner, Michael and Pipa, Gordon},
+  journal={Journal of computational neuroscience},
+  volume={30},
+  number={1},
+  pages={45--67},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{bosch2002causal,
+  title={The causal relation between human papillomavirus and cervical cancer},
+  author={Bosch, Francesc X and Lorincz, Attila and Mu{\~n}oz, Nubia and Meijer, CJLM and Shah, Keerti V},
+  journal={Journal of clinical pathology},
+  volume={55},
+  number={4},
+  pages={244--265},
+  year={2002},
+  publisher={BMJ Publishing Group}
+}
+
+@article{pearl2011bayesian,
+  title={Bayesian networks},
+  author={Pearl, Judea},
+  year={2011}
+}
+
+@article{lauritzen1988local,
+  title={Local computations with probabilities on graphical structures and their application to expert systems},
+  author={Lauritzen, Steffen L and Spiegelhalter, David J},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  pages={157--224},
+  year={1988},
+  publisher={JSTOR}
+}
+
+@article{chow1968approximating,
+  title={Approximating discrete probability distributions with dependence trees},
+  author={Chow, C and Liu, Cong},
+  journal={IEEE transactions on Information Theory},
+  volume={14},
+  number={3},
+  pages={462--467},
+  year={1968},
+  publisher={IEEE}
+}
+
+@inproceedings{friedman1999learning,
+  title={Learning bayesian network structure from massive datasets: the {\guillemotleft}sparse candidate {\guillemotleft}algorithm},
+  author={Friedman, Nir and Nachman, Iftach and Pe{\'e}r, Dana},
+  booktitle={Proceedings of the Fifteenth conference on Uncertainty in artificial intelligence},
+  pages={206--215},
+  year={1999},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
+
+@article{heckerman1995learning,
+  title={Learning Bayesian networks: The combination of knowledge and statistical data},
+  author={Heckerman, David and Geiger, Dan and Chickering, David M},
+  journal={Machine learning},
+  volume={20},
+  number={3},
+  pages={197--243},
+  year={1995},
+  publisher={Springer}
+}
+@inproceedings{bouckaert1993probabilistic,
+  title={Probabilistic network construction using the minimum description length principle},
+  author={Bouckaert, Remco R},
+  booktitle={European conference on symbolic and quantitative approaches to reasoning and uncertainty},
+  pages={41--48},
+  year={1993},
+  organization={Springer}
+}
+
+@book{cover2012elements,
+  title={Elements of information theory},
+  author={Cover, Thomas M and Thomas, Joy A},
+  year={2012},
+  publisher={John Wiley \& Sons}
+}
+
+@article{galton1889co,
+  title={I. Co-relations and their measurement, chiefly from anthropometric data},
+  author={Galton, Francis},
+  journal={Proceedings of the Royal Society of London},
+  volume={45},
+  number={273-279},
+  pages={135--145},
+  year={1889},
+  publisher={The Royal Society}
+}
+
+@article{pearson1896mathematical,
+  title={Mathematical contributions to the theory of evolution. III. Regression, heredity, and panmixia},
+  author={Pearson, Karl},
+  journal={Philosophical Transactions of the Royal Society of London. Series A, containing papers of a mathematical or physical character},
+  volume={187},
+  pages={253--318},
+  year={1896},
+  publisher={JSTOR}
+}
+
+@article{granger1969investigating,
+  title={Investigating causal relations by econometric models and cross-spectral methods},
+  author={Granger, Clive WJ},
+  journal={Econometrica: Journal of the Econometric Society},
+  pages={424--438},
+  year={1969},
+  publisher={JSTOR}
+}
+
+@article{pearl2002causality,
+  title={Causality: models, reasoning, and inference},
+  author={Pearl, Judea},
+  journal={IIE Transactions},
+  volume={34},
+  number={6},
+  pages={583--589},
+  year={2002},
+  publisher={Springer}
+}
+
+@inproceedings{luo2015discovering,
+  title={Discovering causal structures from time series data via enhanced Granger causality},
+  author={Luo, Ling and Liu, Wei and Koprinska, Irena and Chen, Fang},
+  booktitle={Australasian Joint Conference on Artificial Intelligence},
+  pages={365--378},
+  year={2015},
+  organization={Springer}
+}
+
+@article{hu2017cause,
+  title={Cause-effect analysis of industrial alarm variables using transfer entropies},
+  author={Hu, Wenkai and Wang, Jiandong and Chen, Tongwen and Shah, Sirish L},
+  journal={Control Engineering Practice},
+  volume={64},
+  pages={205--214},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{su2017capturing,
+  title={Capturing Causality for Fault Diagnosis Based on Multi-Valued Alarm Series Using Transfer Entropy},
+  author={Su, Jianjun and Wang, Dezheng and Zhang, Yinong and Yang, Fan and Zhao, Yan and Pang, Xiangkun},
+  journal={Entropy},
+  volume={19},
+  number={12},
+  pages={663},
+  year={2017},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{yu2015detection,
+  title={Detection of causality between process variables based on industrial alarm data using transfer entropy},
+  author={Yu, Weijun and Yang, Fan},
+  journal={Entropy},
+  volume={17},
+  number={8},
+  pages={5868--5887},
+  year={2015},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{friston2013analysing,
+  title={Analysing connectivity with Granger causality and dynamic causal modelling},
+  author={Friston, Karl and Moran, Rosalyn and Seth, Anil K},
+  journal={Current opinion in neurobiology},
+  volume={23},
+  number={2},
+  pages={172--178},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{chen2018process,
+  title={Process Monitoring Based on Multivariate Causality Analysis and Probability Inference},
+  author={Chen, Xiaolu and Wang, Jing and Zhou, Jinglin},
+  journal={IEEE Access},
+  volume={6},
+  pages={6360--6369},
+  year={2018},
   publisher={IEEE}
 }
