--- a/bib/bibliografia.bib
+++ b/bib/bibliografia.bib
@@ -257,3 +257,33 @@ institution = {American National Standard/Instrumentations, Systems \& Automatio
   year={2018},
   publisher={IEEE}
 }
+@inproceedings{tung2007inferring,
+  title={Inferring gene regulatory networks from microarray time series data using transfer entropy},
+  author={Tung, Thai Quang and Ryu, Taewoo and Lee, Kwang H and Lee, Doheon},
+  booktitle={Computer-Based Medical Systems, 2007. CBMS'07. Twentieth IEEE International Symposium on},
+  pages={383--388},
+  year={2007},
+  organization={IEEE}
+}
+
+@article{zou2009granger,
+  title={Granger causality vs. dynamic Bayesian network inference: a comparative study},
+  author={Zou, Cunlu and Feng, Jianfeng},
+  journal={BMC bioinformatics},
+  volume={10},
+  number={1},
+  pages={122},
+  year={2009},
+  publisher={BioMed Central}
+}
+
+@article{verron2010fault,
+  title={Fault detection and isolation of faults in a multivariate process with Bayesian network},
+  author={Verron, Sylvain and Li, Jing and Tiplica, Teodor},
+  journal={Journal of Process Control},
+  volume={20},
+  number={8},
+  pages={902--911},
+  year={2010},
+  publisher={Elsevier}
+}
