--- a/slides.tex
+++ b/slides.tex
@@ -65,7 +65,7 @@
 
 \pgfdeclareimage[height=0.7cm]{logo_capes}{figuras/logo-capes}
 
-
+\newcommand{\citeasnoun}{\citet}
 
 % \DefineBibliographyStrings{portuguese}{%
 %   sinenomine  = {s.n.},
@@ -84,7 +84,7 @@
 \include{tex/1-introducao/introducao}
 
 % Data Streams
-\include{tex/2-data_streams/data_streams}
+\include{tex/2-theoretical/theoretical}
 
 % Estudo de Caso
 \include{tex/3-estudo-de-caso/estudo_de_caso}
