--- a/tex/1-introducao/introducao.tex
+++ b/tex/1-introducao/introducao.tex
@@ -1,4 +1,37 @@
 \section{Introduction}
+
 \begin{frame}{Introduction}
+
+    \begin{itemize}
+        \item Motivation of the study
+        \begin{itemize}
+            \item Causal relationships importance
+        \end{itemize}
+        
+        \item Proposal
+            \begin{itemize}
+            \item Define a methodology to identify causal relationships between discrete time series on systems.
+                \begin{itemize}
+                    \item Transfer Entropy
+                    \item Structural Learning on Bayesian Networks
+                \end{itemize}
+            \end{itemize}
+            
+        \item Related Work
+            \begin{itemize}
+                \item {Implementation of transfer entropy for detecting causal relationships between industrial alarm series \footnote{
+                \cite{su2017capturing} 
+                \cite{hu2017cause},
+                \cite{yu2015detection}}}
+                
+                \item {Use of transfer entropy to detect neuronal connections \footnote{\cite{vicente2011transfer}}}
+                
+                \item {Use of transfer entropy, Granger causality and Dynamic Bayesian Networks for reconstruction of genetic networks \footnote{
+                \cite{tung2007inferring}
+                \cite{zou2009granger}}}
+                
+                
+            \end{itemize}
+    \end{itemize}
 
 \end{frame}
