--- a/tex/2-theoretical/theoretical.tex
+++ b/tex/2-theoretical/theoretical.tex
@@ -1,6 +1,6 @@
-\section{\itshape Data Streams  \textnormal{(Fluxos de  dados)}}
+\section{\itshape Theoretical Foundations}
 
-\begin{frame}{\textit{Data Streams}}
+\begin{frame}{{Theoretical Foundations}}
     \begin{columns}
 	    \column{0.5\textwidth}\centering
 
@@ -9,7 +9,7 @@
 	\end{columns}
 \end{frame}
 
-\begin{frame}{\textit{Data Streams}}
+\begin{frame}{{Theoretical Foundations}}
 	\begin{columns}
 	    \column{0.5\textwidth}\centering
 	       
