Inicio da teoria

--- a/beamercolorthemeufrn.sty
+++ b/beamercolorthemeufrn.sty
@@ -8,6 +8,7 @@
 %\DefineNamedColor{named}{black1}{RGB}{49, 115, 121}
 \DefineNamedColor{named}{black1}{RGB}{79, 109, 122}
 \DefineNamedColor{named}{azultext}{RGB}{8, 76, 97}
+\DefineNamedColor{named}{black1}{RGB}{ 8, 76, 97}
 
 \mode<presentation>
 % \setbeamercolor{author in head/foot}{bg=azul1, fg=white}
@@ -25,6 +26,7 @@
 \setbeamercolor*{structure}{fg=azultext,bg=white}
 \setbeamercolor{frametitle}{fg=white,bg=black1}
 \mode<all>
+
 
 % 12139845,333333333
 
