--- a/bib/bibliografia.bib
+++ b/bib/bibliografia.bib
@@ -1,4 +1,5 @@
 
+
 @article{schreiber2000measuring,
   title={Measuring information transfer},
   author={Schreiber, Thomas},
@@ -260,10 +261,13 @@ institution = {American National Standard/Instrumentations, Systems \& Automatio
 @inproceedings{tung2007inferring,
   title={Inferring gene regulatory networks from microarray time series data using transfer entropy},
   author={Tung, Thai Quang and Ryu, Taewoo and Lee, Kwang H and Lee, Doheon},
-  booktitle={Computer-Based Medical Systems, 2007. CBMS'07. Twentieth IEEE International Symposium on},
+  booktitle={Computer-Based Medical Systems, 2007. CBMS'07. Twentieth IEEE International Symposium on Computer-Based Medical Systems},
   pages={383--388},
   year={2007},
-  organization={IEEE}
+  organization={IEEE},
+  address={Maribor, Slovenia},
+  publisher={IEEE}
+
 }
 
 @article{zou2009granger,
