--- a/tex/7-referencias/referencias.tex
+++ b/tex/7-referencias/referencias.tex
@@ -1,3 +1,10 @@
-\begin{frame}{Referências}
-    \printbibliography
+% \begin{frame}{References}
+%     \printbibliography
+% \end{frame}
+% \begin{frame}{References}
+%     \printbibliography
+% \end{frame}
+
+\begin{frame}[allowframebreaks]{References}
+\printbibliography
 \end{frame}
