COntinuacao da teoria

--- a/slides.tex
+++ b/slides.tex
@@ -32,10 +32,12 @@
 % Para modificar a cor do texto
 \usepackage{color}
 % Para incluir condicoes
+
 \usepackage{ifthen}
 % Para colocar legendas em algo que nao e float
 \usepackage{capt-of}
 % Para definir o tema do slide
+\usepackage[ruled, linesnumbered]{algorithm2e}
 \usetheme{Berlin}
 % Para difinir cores e background
 \usecolortheme{ufrn}
