--- a/tex/3-estudo-de-caso/estudo_de_caso.tex
+++ b/tex/3-estudo-de-caso/estudo_de_caso.tex
@@ -1,5 +1,6 @@
-\section{Estudo de Caso}
-\begin{frame}{Estudo de Caso}
+\section{Proposed Methodology}
+\title{Proposed Methodology}
+\begin{frame}{Proposed Methodology}
 
 	\begin{columns}
 	    
