Conserto de erros na teoria

--- a/beamercolorthemeufrn.sty
+++ b/beamercolorthemeufrn.sty
@@ -18,13 +18,15 @@
 % \setbeamercolor{institute in head/foot}{fg=instituteColor}
 \setbeamercolor{date in head/foot}{bg=black1, fg=white}
 
-\setbeamercolor{alerted text}{fg=black1!80!laranja1}
-\setbeamercolor*{palette primary}{fg=white,bg=black1}
-\setbeamercolor*{palette secondary}{fg=laranja1,bg=white}
+\setbeamercolor{alerted text}{fg=azul1!80!laranja1}
+\setbeamercolor*{palette primary}{fg=white,bg=azul2}
+\setbeamercolor*{palette secondary}{fg=red,bg=white}
 \setbeamercolor*{palette tertiary}{fg=white,bg=black1}
 \setbeamercolor*{palette quaternary}{fg=white,bg=laranja1}
-\setbeamercolor*{structure}{fg=azultext,bg=white}
+\setbeamercolor*{structure}{fg=black1,bg=white}
 \setbeamercolor{frametitle}{fg=white,bg=black1}
+\mode<all>
+
 \mode<all>
 
 
@@ -52,3 +54,10 @@
 % Background
 % \setbeamertemplate{background}{
 % 	\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{figuras/background.pdf}}
+
+% \setbeamertemplate{footline}{%
+%     \ifnum\insertcontinuationcount>0
+%         \addtocounter{framenumber}{-1}
+%     \fi
+%     \insertframenumber/\inserttotalframenumber
+% }
